--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-httparse = "1.8"
+hyper = { version = "0.14", features = ["full"]}
+tokio = { version = "1", features = ["full"]}
+pretty_env_logger = "0.4"
