--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,9 @@ edition = "2021"
 [dependencies]
 hyper = { version = "0.14", features = ["full"]}
 tokio = { version = "1", features = ["full"]}
-pretty_env_logger = "0.4"
+futures = "0.3"
+json = "0.12"
+markup5ever = "0.11"
+html5ever = "0.26"
+markup5ever_rcdom = "0.2"
+tendril = "0.4"
