--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+httparse = "1.8"
 hyper = { version = "0.14", features = ["full"]}
 tokio = { version = "1", features = ["full"]}
 futures = "0.3"
@@ -13,4 +14,5 @@ json = "0.12"
 markup5ever = "0.11"
 html5ever = "0.26"
 markup5ever_rcdom = "0.2"
+regex = "1"
 tendril = "0.4"
