--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ markup5ever = "0.11"
 html5ever = "0.26"
 markup5ever_rcdom = "0.2"
 regex = "1"
-# tendril = "0.4"
+tendril = "0.4"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 url = "2.4"
